--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
 # VITE_APP_LANDING_URL='http://127.0.0.1:5500/index.html'
 # VITE_APP_BASE_URL='https://test.sendtruly.com/v0.1/api'
-VITE_APP_PAYSTACK_KEY='pk_test_3d745289284d53524075c3b4e499bad9d25239e0'
+# VITE_APP_PAYSTACK_KEY='pk_test_3d745289284d53524075c3b4e499bad9d25239e0'
 # VITE_APP_AUTHORIZATION_KEY='send_truly_24434'
 
 
-VITE_APP_BASE_URL='https://v2.sendtruly.com/v0.1/api'
+# VITE_APP_BASE_URL='https://v2.sendtruly.com/v0.1/api'
+VITE_APP_BASE_URL='https://live.sendtruly.com/v0.1/api'
 VITE_APP_LANDING_URL='https://sendtruly.com/'
-# VITE_APP_PAYSTACK_KEY='pk_live_c2f58b4482faf6b5de85edf85491eec3f46c1197'
+VITE_APP_PAYSTACK_KEY='pk_live_c2f58b4482faf6b5de85edf85491eec3f46c1197'
 VITE_APP_AUTHORIZATION_KEY='send_truly_live_001'
