changed delivery route from 3 to 4

--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@
 # VITE_APP_AUTHORIZATION_KEY='send_truly_24434'
 
 
-# VITE_APP_BASE_URL='https://v2.sendtruly.com/v0.1/api'
-VITE_APP_BASE_URL='https://live.sendtruly.com/v0.1/api'
+VITE_APP_BASE_URL='https://v2.sendtruly.com/v0.1/api'
+# VITE_APP_BASE_URL='https://live.sendtruly.com/v0.1/api'
 VITE_APP_LANDING_URL='https://sendtruly.com/'
 VITE_APP_PAYSTACK_KEY='pk_live_c2f58b4482faf6b5de85edf85491eec3f46c1197'
 VITE_APP_AUTHORIZATION_KEY='send_truly_live_001'
